Fix social menu's align in footer

--- a/themes/pattern-lab-starter/dest/style.css
+++ b/themes/pattern-lab-starter/dest/style.css
@@ -6275,8 +6275,8 @@ html {
   .site-footer .colum-grid-social {
     width: 40.96386%;
     float: left;
-    margin-top: 5px;
-    margin-left: 270px;
+    margin-top: -30px;
+    margin-left: 310px;
   }
 }
 
