--- a/themes/pattern-lab-starter/source/_patterns/03-organisms/site/site-footer/_site-footer.scss
+++ b/themes/pattern-lab-starter/source/_patterns/03-organisms/site/site-footer/_site-footer.scss
@@ -80,8 +80,8 @@ $container-style: fluid;
 .colum-grid-social{
   @include span(5);
   //border: solid 1px $c-white;
-  margin-top:5px;
-  margin-left:270px;
+  margin-top:-30px;
+  margin-left:310px;
 }
 
   }
